--- a/src/assets/style/responsivo.css
+++ b/src/assets/style/responsivo.css
@@ -7,7 +7,7 @@
     .secao-horizontal .cartao__botao,
     .secao-horizontal .cartao__player,
     .secao-vertical .secao__link {
-        display: none;
+        display: none !important;
     }
 
     .navbar {
@@ -18,6 +18,9 @@
         padding-left: 1rem;
         padding-right: 1rem;
     }
+    .secao-horizontal .cartao{
+        column-gap: 0.5rem;
+    }
 
     .secao-horizontal .cartao__imagem {
         height: 56px;
@@ -26,6 +29,8 @@
 
     .secao-horizontal .cartao__titulo {
         font: 700 14px/20px Open Sans, sans-serif;
+        grid-row: 1/4;
+        align-self: center !important;
     }
 
     .secao-vertical .cartao {
